--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Sun</string>
     <string name="sun">Sun</string>
     <color name="bright_sun">#fcfcb7</color>
+    <color name="luna">#FFFFFF</color>
     <color name="blue_sky">#1e7ac7</color>
     <color name="sunset_sky">#ec8100</color>
     <color name="night_sky">#05192e</color>
